--- a/index.html
+++ b/index.html
@@ -31,4 +31,7 @@
             <a href="">Download Excursion (Coming Soon!)</a>
         </div>  
     </body>
+    <footer>
+        <span>&copy; Excursion</span>
+    </footer>
 </html>
